--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
@@ -11,42 +11,48 @@
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0"> <a href="../../Home/index.html" class="active" id="home">Home</a> </div>
+    <div tabindex="0"> 
+        <a href="../../Home/index.html" class="active" id="home">Home</a> 
+    </div>
 
     <div class="dropdown" tabindex="0">
-        <div class="dropbtn"> <a href="../../Shop/Home/Shop.html" id="Packages"> Packages </a>
+        <div class="dropbtn"> 
+            <a href="../../Shop/Home/Shop.html" id="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
             <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
             <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday">Holliday</a>
+            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
             <a href="../../Shop/Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" tabindex="0">
-        <div class="dropbtn"> <a href="#" > About the region </a>
+        <div class="dropbtn"> 
+            <a href="Description.html" > About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
             <a href="Description.html" id="Description"> Description </a>
-            <a href="../Foto/Foto.html" id="fotos">fotos</a>
-            <a href="../Video/video.html" id="video">video</a>
-            <a href="../wallpaper/wallpaper.html" id="wallpaper">wallpaper</a>
+            <a href="../Foto/Foto.html" id="fotos">Photos</a>
+            <a href="../Video/video.html" id="video">Video</a>
+            <a href="../wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0"> <a href="../../AboutUs/AboutUs.html" id="About">About us</a> </div>
-    <div tabindex="0">  <a href="../../Contact%20us%20/Contact.html" id="Contact">Contact us</a> </div>
-
+    <div tabindex="0"> 
+        <a href="../../AboutUs/AboutUs.html" id="About">About us</a> 
+    </div>
+    <div tabindex="0">  
+        <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a> 
+    </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
-
-
 <header tabindex="0">
-
     <ul class="breadcrumb">
-        <li tabindex="0"><a href="../../Home/index.html">Home</a></li>
+        <li tabindex="0">
+            <a href="../../Home/index.html">Home</a>
+        </li>
         <li>Description</li>
     </ul>
 </header>
@@ -55,59 +61,66 @@
 <main id="main">
 <section id="section-c" class="grid">
     <div class="content-wrap">
-        <h2 class="content-title">
-            Spreewald
-        </h2>
+        <h2 class="content-title">Spreewald</h2>
         <p>
             The Spreewald is an extensive lowland area and a historic cultural landscape in the southeast of the state of Brandenburg . The main feature is the natural river branch of the Spree , which has been significantly expanded by established channels. As an alluvial and moor landscape, it is of national importance for nature conservation and is protected as a biosphere reserve. The Spreewald as a cultural landscape was the center of the Battle of Halbe at the end of World War II, which included the last major land conflicts between German and Soviet forces. The area is one of the most famous and popular destinations in the state of Brandenburg.
         </p>
         <p>
-            <a href="https://en.wikipedia.org/wiki/Spreewald" tabindex="0">
-                Read more on wiki
-            </a>
+            <a href="https://en.wikipedia.org/wiki/Spreewald" tabindex="0">Read more on wiki</a>
         </p>
     </div>
 </section>
 </main>
 
-
-
 <!-- Section D -->
 <div>
     <section id="section-d" class="grid" tabindex="0">
-        <div class="box">
+        <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
-            <p>preeWaldGürcken GmbH<br>Karl-liebkenchtStr 102<br>Germany<br>03046 Cottbus<br>
-                Tel: +49 1111-555-1212 </p>
-            <p>contact@spreewahld.de</p>
+            <p typeof="Organization">
+                <span property="legalName">SpreeWaldGürcken GmbH</span><br>
+                <span property="address" typeof="PostalAddress">
+                    <span property="streetAddress">Karl-liebkenchtStr 102</span><br>
+                    <span property="addressLocality">Cottbus</span> -
+                    <span property="addressCountry" typeof="Country">Germany</span><br>
+                    <span property="postalCode">03046</span>
+                </span><br>Tel: 
+                <span property="telephone" content="+4911115551212">+49 1111-555-1212</span>
+            </p>
+            <p typeof="Organization">
+                <span property="email">contact@spreewahld.de</span>
+            </p>
         </div>
 
         <div class="box">
             <h2 class="content-title">About Our services</h2>
-            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.</p>
+            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.
+            </p>
         </div>
     </section>
 </div>
 
-
 <!-- Footer -->
 <footer id="main-footer" class="grid-grid">
-
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
         <li tabindex="0">
-            <a href='#' target='_blank' ><span class="socicon-facebook"></span></a>
+            <a href='#' target='_blank' >
+                <span class="socicon-facebook"></span>
+            </a>
         </li>
         <li tabindex="0">
-            <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
+            <a href="../../Shop/Home/Shop.html" accesskey="p" > 
+                <u>P</u>ackages 
+            </a>
         </li>
         <li tabindex="0">
-            <a href='#' target='_blank'><span class="socicon-instagram"></span></a>
+            <a href='#' target='_blank'>
+                <span class="socicon-instagram"></span>
+            </a>
         </li>
     </ul>
 </footer>
-
 <script src="../../../js/Script.js"></script>
-
 </body>
 </html>
