--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -6,64 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-
 </head>
 <body onload="accesskey()">
-
+    
+<!--navagation-->
 <nav class="topnav" id="myTopnav">
-   <div tabindex="0"> <a href="index.html" class="active" id="home">Home</a> </div>
-
+    <div tabindex="0"> 
+        <a href="index.html" class="active" id="home">Home</a> 
+    </div>
     <div class="dropdown" tabindex="0">
-         <div class="dropbtn"> <a href="../Shop/Home/Shop.html" id="Packages"> Packages </a>
+         <div class="dropbtn"> 
+             <a href="../Shop/Home/Shop.html" id="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
             <a href="../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
             <a href="../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../Shop/Hollydays/Hollydays.html" id="Holliday">Holliday</a>
+            <a href="../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
             <a href="../Shop/Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" tabindex="0">
-        <div class="dropbtn"> <a href="#" > About the region </a>
+        <div class="dropbtn"> 
+            <a href="../About%20the%20region/Description/Description.html" id="Description" > About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
           <a href="../About%20the%20region/Description/Description.html" id="Description"> Description </a>
-            <a href="../About%20the%20region/Foto/Foto.html" id="fotos">fotos</a>
-            <a href="../About%20the%20region/Video/video.html" id="video">video</a>
-            <a href="../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">wallpaper</a>
+            <a href="../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
+            <a href="../About%20the%20region/Video/video.html" id="video">Video</a>
+            <a href="../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0"> <a href="../AboutUs/AboutUs.html" id="About"> About us</a></div>
-    <div tabindex="0"> <a  href="../Contact%20us%20/Contact.html" id="Contact">Contact us</a></div>
+    <div tabindex="0"> 
+        <a href="../AboutUs/AboutUs.html" id="About"> About us</a>
+    </div>
+    <div tabindex="0"> 
+        <a  href="../Contact%20Us/Contact.html" id="Contact">Contact us</a>
+    </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
-
 </nav>
-
-<!-- hier sind wir mit der Nivagation fertig! -->
-
 <header id="showcase" class="grid" tabindex="0" >
-
     <div class="bg-image"> </div>
     <div class="content-wrap">
         <h1>Welcome to Tourist Information</h1>
         <p>Would you like to take a well planned trip to tourist locations in Spreewald?
             Save yourself the time and effort as we offer you several packages which include accomodation and transportation at moderate prices to tourist sites at Burg, Lubbenau, Lubben, Calau and Cottbus.
         </p>
-     <div tabindex="0"> <a href="#section-b" class="btn">Read More</a> </div>
+     <div tabindex="0"> 
+         <a href="#section-b" class="btn">Read More</a> 
+        </div>
     </div>
-
-
-
-
-
-
 </header>
 
 <!-- Main Area -->
 <main id="main">
-
     <!-- Section  breadcrumb -->
 
     <!-- Section A -->
@@ -100,7 +97,8 @@
                     <img src="../../img/Imges/G3.png" alt="">
                     <div class="card-content">
                         <h3 class="card-title">River Boat-ride Tour</h3>
-                        <p>We take you on a smooth boat ride along the rivers in the misdst of the forest reserve. This four hour journey on boats through the forest is a purely relaxing trip with ladmark stops for picknicking and education on plant and animal species.</p>
+                        <p>We take you on a smooth boat ride along the rivers in the misdst of the forest reserve. This four hour journey on boats through the forest is a purely relaxing trip with ladmark stops for picknicking and education on plant and animal species.
+                        </p>
                     </div>
                 </div>
             </li>
@@ -121,22 +119,34 @@
     <section id="section-c" class="grid">
         <div class="content-wrap">
             <h2 class="content-title">Spreewald welcomes You</h2>
-            <p> Swap the noise of the city for the rich sounds of nature. Come to the holiday in the Spreewald. In just a few hours, the best conditions for a journey to yourself. Discover your inner balance in the midst of nature. A Spreewald vacation has many faces. Whether active by bike or directly with the paddle boat on the classic waterways of the region. Time will come to life in the Spreewald. Do you keep moving on holiday? The region offers relaxation in wellness and SPA in comfortable hotels, not only in the spontaneous break and short break ...</p>
+            <p> Swap the noise of the city for the rich sounds of nature. Come to the holiday in the Spreewald. In just a few hours, the best conditions for a journey to yourself. Discover your inner balance in the midst of nature. A Spreewald vacation has many faces. Whether active by bike or directly with the paddle boat on the classic waterways of the region. Time will come to life in the Spreewald. Do you keep moving on holiday? The region offers relaxation in wellness and SPA in comfortable hotels, not only in the spontaneous break and short break ...
+            </p>
         </div>
     </section>
 
     <!-- Section D -->
     <section id="section-d" class="grid" tabindex="0">
-        <div class="box">
+        <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
-            <p>preeWaldGürcken GmbH<br>Karl-liebkenchtStr 102<br>Germany<br>03046 Cottbus<br>
-                Tel: +49 1111-555-1212 </p>
-            <p>contact@spreewahld.de</p>
+            <p typeof="Organization">
+                <span property="legalName">SpreeWaldGürcken GmbH</span><br>
+                <span property="address" typeof="PostalAddress">
+                    <span property="streetAddress">Karl-liebkenchtStr 102</span><br>
+                    <span property="addressLocality">Cottbus</span> -
+                    <span property="addressCountry" typeof="Country">Germany</span><br>
+                    <span property="postalCode">03046</span>
+                </span><br>Tel: 
+                <span property="telephone" content="+4911115551212">+49 1111-555-1212</span>
+            </p>
+            <p typeof="Organization">
+                <span property="email">contact@spreewahld.de</span>
+            </p>
         </div>
 
         <div class="box">
             <h2 class="content-title">About Our services</h2>
-            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.</p>
+            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.
+            </p>
         </div>
     </section>
 </main>
@@ -147,17 +157,20 @@
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
         <li tabindex="0">
-            <a href='#' target='_blank' ><span class="socicon-facebook"></span></a>
+            <a href='#' target='_blank' >
+                <span class="socicon-facebook"></span>
+            </a>
         </li>
         <li tabindex="0">
             <a href="../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
         </li>
         <li tabindex="0">
-            <a href='#' target='_blank'><span class="socicon-instagram"></span></a>
+            <a href='#' target='_blank'>
+                <span class="socicon-instagram"></span>
+            </a>
         </li>
     </ul>
 </footer>
-
 <script src="../../js/Script.js"></script>
 </body>
 </html>
