--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -6,45 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-
 </head>
 <body onload="accesskey();displaySport()">
-
+    
+<!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0"> <a href="../../Home/index.html" class="active" id="home">Home</a> </div>
+    <div tabindex="0"> 
+        <a href="../../Home/index.html" class="active" id="home">Home</a> 
+    </div>
     <div class="dropdown" tabindex="0">
-        <div class="dropbtn"> <a href="../Home/Shop.html" id="Packages"> Packages </a>
+        <div class="dropbtn"> 
+            <a href="../Home/Shop.html" id="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
             <a href="SpecialOffers.html" id="Special">Special offers</a>
             <a href="../Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../Hollydays/Hollydays.html" id="Holliday">Holliday</a>
+            <a href="../Hollydays/Hollydays.html" id="Holliday">Holiday</a>
             <a href="../Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" tabindex="0">
-        <div class="dropbtn"> <a href="#" > About the region </a>
+        <div class="dropbtn"> 
+            <a href="../../About%20the%20region/Description/Description.html" > About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
             <a href="../../About%20the%20region/Description/Description.html" id="Description">Description </a>
-            <a href="../../About%20the%20region/Foto/Foto.html" id="fotos">fotos</a>
-            <a href="../../About%20the%20region/Video/video.html" id="video">video</a>
-            <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">wallpaper</a>
+            <a href="../../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
+            <a href="../../About%20the%20region/Video/video.html" id="video">Video</a>
+            <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0">  <a href="../../AboutUs/AboutUs.html" id="About">About us</a></div>
-    <div tabindex="0"> <a href="../../Contact%20us%20/Contact.html" id="Contact">Contact us</a></div>
-
+    <div tabindex="0">  
+        <a href="../../AboutUs/AboutUs.html" id="About">About us</a>
+    </div>
+    <div tabindex="0"> 
+        <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a>
+    </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
+    
 <!-- Section A -->
 <header>
-
     <ul class="breadcrumb">
-        <li tabindex="0"><a href="../../Home/index.html">Home</a></li>
-        <li tabindex="0"><a href="../Home/Shop.html">Packages</a></li>
+        <li tabindex="0">
+            <a href="../../Home/index.html">Home</a>
+        </li>
+        <li tabindex="0">
+            <a href="../Home/Shop.html">Packages</a>
+        </li>
         <li>Special offers</li>
     </ul>
 </header>
@@ -52,11 +63,10 @@
 <main>
 
     <div id="showcase2" class="grid">
-
         <div class="bg-image"> </div>
         <div class="content-wrap">
             <h1>Welcome to our Special offers </h1>
-            <p>You get 10 percent on all products, our products are organic and very healthy, the nature of spreewald is wonderful and very beautiful. with and you can relax. just go on hollidys and get 10 percent off everything and it's done automatically discover our Hollidays now. Plus get pumpkin soup for free
+            <p>You get 10 percent on all trips and meals.<br> our meals are prepared with organic crops freshly taken from the farm which makes them highly nutritious. <br>You also get pumpkin soup for free. Discover our special offers now!
             </p>
             <a href="../Hollydays/Hollydays.html" class="btn">Read More</a>
         </div>
@@ -64,65 +74,72 @@
 
 <section id="section-c" class="grid">
     <div class="content-wrap">
-        <h2 class="content-title">Spreewald - Zurück zum Ich</h2>
-        <p>  The Spreewald Winter has its own charm. Experience an unforgettable winter holiday in the Spreewald! You can experience the white fairy-tale landscape in the Spreewald with mulled wine train rides or skating! Long-lasting frosty temperatures make the region a paradise for ice hikers and skaters. Ski slopes? Chairlifts? Instead: extended winter walks on clear air, rides on the frozen sledges. And then? Enjoy a bit of wellness in the Spreewald, the soothing warmth of a bath or massages with Spreewald herbs. Find peace - back to the me!
-
-            The winter holiday in the Spreewald is pure deceleration, because a relaxed silence is spreading throughout the region. Attractive offers make the holiday booking easy.</p>
+        <h2 class="content-title">Spreewald Welcomes You</h2>
+        <p>The Spreewald Winter has its own charm. Experience an unforgettable winter holiday in the Spreewald! You can experience the white fairy-tale landscape in the Spreewald with mulled wine train rides or skating! Long-lasting frosty temperatures make the region a paradise for ice hikers and skaters. We exchange the common Ski slopes and Chairlifts experience with the unique extended winter walks on clear air, rides on the frozen sledges.<br>Enjoy every bit of wellness in the Spreewald and the soothing warmth of a bath or massages with Spreewald herbs. 
+        The winter holiday in the Spreewald is pure deceleration, because a relaxed silence is spreading throughout the region. Our special offers make the holiday booking easy.
+        </p>
     </div>
 </section>
 
-
 <div id="showcase3" class="grid">
-
     <div class="bg-image"> </div>
     <div class="content-wrap">
-        <h1>Winterkahnfahrten im Spreewald</h1>
+        <h1>Winter Boat rides in Spreewald</h1>
         <p>
-            From November to March the Spreewald is winter season. In the cold season, the popular Glühweinkahnfahrten, as the winter barge drives are called in the Spreewald, start only about twice a day at selected ports. With cozy Blankets and hot drinks on board it goes by romantic winter boat trip through the snowy nature.
+            From November to March the Spreewald is winter season. In the cold season, the popular "Glühweinkahnfahrten", as the winter boat drives are called in the Spreewald, start only about twice a day at selected ports. We have cozy Blankets and hot drinks on board for cushion on this romantic winter boat trip through the snowy nature. Now in winter, the silence of nature is almost audible, because in the Spreewald it is very quiet after the peak season. Enjoy the uniqueness of a boat trip in the off-season, because you are almost alone on the rivers of the region.
 
-                         Now in winter, the silence of nature is almost audible, because in the Spreewald it is very quiet after the peak season. Enjoy the uniqueness of a boat trip in the off-season, because you are almost alone on the flow of the region.
-
-                         Tip: Not all harbors offer daily winter barge rides in the low season. Therefore, we recommend prior to your arrival to the ports with Glühweinkahnfahrten in Spreewald after departure times or to ask for individual tours.You can find all these offers in sports
+            Tip: Not all ports offer daily winter boat rides in the low season. Therefore, we recommend that prior to your arrival to the ports for "Glühweinkahnfahrten" in Spreewald ask for individual tours.You can find all these offers in sports
         </p>
         <a href="../Sport/Sport.html" class="btn">Read More</a>
     </div>
 </div>
 
-
-
 </main>
-
 
 <!-- Section B -->
 <div id="main">
     <section id="section-d" class="grid">
-        <div class="box">
+        <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
-            <p>preeWaldGürcken GmbH<br>Karl-liebkenchtStr 102<br>Germany<br>03046 Cottbus<br>
-                Tel: +49 1111-555-1212 </p>
-            <p>contact@spreewahld.de</p>
+            <p typeof="Organization">
+                <span property="legalName">SpreeWaldGürcken GmbH</span><br>
+                <span property="address" typeof="PostalAddress">
+                    <span property="streetAddress">Karl-liebkenchtStr 102</span><br>
+                    <span property="addressLocality">Cottbus</span> -
+                    <span property="addressCountry" typeof="Country">Germany</span><br>
+                    <span property="postalCode">03046</span>
+                </span><br>Tel: 
+                <span property="telephone" content="+4911115551212">+49 1111-555-1212</span>
+            </p>
+            <p typeof="Organization">
+                <span property="email">contact@spreewahld.de</span>
+            </p>
         </div>
 
         <div class="box">
             <h2 class="content-title">About Our services</h2>
-            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.</p>
+            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.
+            </p>
         </div>
     </section>
 </div>
 
 <!-- Footer -->
 <footer id="main-footer" class="grid-grid">
-
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
         <li tabindex="0">
-            <a href='#' target='_blank' ><span class="socicon-facebook"></span></a>
+            <a href='#' target='_blank' >
+                <span class="socicon-facebook"></span>
+            </a>
         </li>
         <li tabindex="0">
             <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
         </li>
         <li tabindex="0">
-            <a href='#' target='_blank'><span class="socicon-instagram"></span></a>
+            <a href='#' target='_blank'>
+                <span class="socicon-instagram"></span>
+            </a>
         </li>
     </ul>
 </footer>
