--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -6,75 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-
-
 </head>
 <body onload="accesskey()">
 
-<!--******************************************navagation *********************-->
+<!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0">  <a href="../../Home/index.html" class="active" id="home">Home</a> </div>
+    <div tabindex="0">  
+        <a href="../../Home/index.html" class="active" id="home">Home</a> 
+    </div>
      <div class="dropdown" tabindex="0">
-        <div class="dropbtn"> <a href="../../Shop/Home/Shop.html" id="Packages"> Packages </a>
+        <div class="dropbtn"> 
+            <a href="../../Shop/Home/Shop.html" id="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
             <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
             <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday">Holliday</a>
+            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
             <a href="../../Shop/Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" tabindex="0">
-        <div class="dropbtn"> <a href="#" > About the region </a>
+        <div class="dropbtn"> 
+            <a href="../Description/Description.html"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content" tabindex="0">
             <a href="../Description/Description.html" id="Description">Description </a>
-            <a href="#">fotos</a>
-            <a href="../Video/video.html" id="video">video</a>
-            <a href="../wallpaper/wallpaper.html" id="wallpaper">wallpaper</a>
+            <a href="#">Photos</a>
+            <a href="../Video/video.html" id="video">Video</a>
+            <a href="../wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0"> <a href="../../AboutUs/AboutUs.html" id="About">About us</a> </div>
-    <div tabindex="0">  <a href="../../Contact%20us%20/Contact.html" id="Contact">Contact us</a> </div>
+    <div tabindex="0"> 
+        <a href="../../AboutUs/AboutUs.html" id="About">About us</a> 
+    </div>
+    <div tabindex="0">  
+        <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a> 
+    </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
-
-
-
 
 <!-- Section A -->
 
 <header>
-
     <ul class="breadcrumb">
-        <li tabindex="0"><a href="../../Home/index.html">Home</a></li>
+        <li tabindex="0">
+            <a href="../../Home/index.html">Home</a>
+        </li>
         <li>fotos</li>
     </ul>
-
 </header>
-
-
 
 <!-- Section B -->
 <main id="main">
-
-
     <div  class="galarie">
         <div class="row">
             <div class="column">
                 <img src="../../../img/images/12.jpg" style="width:100%" alt="">
                 <img src="../../../img/images/1.jpg" style="width:100%" alt="">
                 <img src="../../../img/images/13.jpg" style="width:100%" alt="">
-
-
             </div>
             <div class="column">
                 <img src="../../../img/images/14.jpg" style="width:100%" alt="">
                 <img src="../../../img/images/2.jpg" style="width:100%" alt="">
                 <img src="../../../img/images/3.jpg" style="width:100%" alt="">
-
             </div>
             <div class="column">
                 <img src="../../../img/images/4.jpeg" style="width:100%" alt="">
@@ -85,20 +81,30 @@
                 <img src="../../../img/images/33.png" style="width:100%" alt="">
                 <img src="../../../img/images/6.jpg" style="width:100%" alt="">
                 <img src="../../../img/images/7.jpg" style="width:100%" alt="">
-
             </div>
         </div>
     </div>
     <section id="section-d" class="grid">
-        <div class="box">
+        <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
-            <p>Hofladen in Klein Radden
-                Marktstände in Beuchow, Boblitz, Burg, Duben, Eichow, Erkner, Lauchhammer, Lübben, Ragow, Schöneiche und Schwarzheide.</p>
-            <p>contact@spreewahld.de</p>
+            <p typeof="Organization">
+                <span property="legalName">SpreeWaldGürcken GmbH</span><br>
+                <span property="address" typeof="PostalAddress">
+                    <span property="streetAddress">Karl-liebkenchtStr 102</span><br>
+                    <span property="addressLocality">Cottbus</span> -
+                    <span property="addressCountry" typeof="Country">Germany</span><br>
+                    <span property="postalCode">03046</span>
+                </span><br>Tel: 
+                <span property="telephone" content="+4911115551212">+49 1111-555-1212</span>
+            </p>
+            <p typeof="Organization">
+                <span property="email">contact@spreewahld.de</span>
+            </p>
         </div>
         <div class="box">
             <h2 class="content-title">About Our services</h2>
-            <p>You are on holiday in the Spreewald for the first time and do not know what you can do in your spare time? The tips below will help you plan your trip to the Spreewald better. Because in addition to paddling, cycling and the popular boat trips, there are many more recreational opportunities and destinations to discover.</p>
+            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.
+            </p>
         </div>
     </section>
 </main>
@@ -109,17 +115,20 @@
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
         <li tabindex="0">
-            <a href='#' target='_blank' ><span class="socicon-facebook"></span></a>
+            <a href='#' target='_blank' >
+                <span class="socicon-facebook"></span>
+            </a>
         </li>
         <li tabindex="0">
             <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
         </li>
         <li tabindex="0">
-            <a href='#' target='_blank'><span class="socicon-instagram"></span></a>
+            <a href='#' target='_blank'>
+                <span class="socicon-instagram"></span>
+            </a>
         </li>
     </ul>
 </footer>
-
 <script src="../../../js/Script.js"></script>
 </body>
 </html>
