--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
@@ -12,66 +12,69 @@
 <!--navagation-->
 
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0"> <a href="../Home/index.html" class="active" id="home">Home</a> </div>
+    <div tabindex="0"> 
+        <a href="../Home/index.html" class="active" id="home">Home</a> 
+    </div>
     <div class="dropdown" tabindex="0">
-          <div class="dropbtn"> <a href="../Shop/Home/Shop.html" id="Packages"> Packages </a>
+          <div class="dropbtn"> 
+            <a href="../Shop/Home/Shop.html" id="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
           </div>
         <div class="dropdown-content">
             <a href="../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
             <a href="../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../Shop/Hollydays/Hollydays.html" id="Holliday">Holliday</a>
+            <a href="../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
             <a href="../Shop/Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" tabindex="0">
-        <div class="dropbtn"> <a href="#" > About the region </a>
+        <div class="dropbtn"> 
+            <a href="../About%20the%20region/Description/Description.html" > About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
             <a href="../About%20the%20region/Description/Description.html" id="Description">Description </a>
-            <a href="../About%20the%20region/Foto/Foto.html" id="fotos">fotos</a>
-            <a href="../About%20the%20region/Video/video.html" id="video">video</a>
-            <a href="#">wallpaper</a>
+            <a href="../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
+            <a href="../About%20the%20region/Video/video.html" id="video">Video</a>
+            <a href="#">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0">  <a href="#" id="About">About us </a> </div>
-    <div tabindex="0"> <a href="../Contact%20us%20/Contact.html" id="Contact">Contact us</a> </div>
-
+    <div tabindex="0">  
+        <a href="AboutUs.html" id="About">About us </a>
+    </div>
+    <div tabindex="0"> 
+        <a href="../Contact%20Us/Contact.html" id="Contact">Contact us</a> 
+    </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
-
 <!-- Section A -->
 <header>
-<ul class="breadcrumb">
-    <li tabindex="0"><a href="../Home/index.html">Home</a></li>
+    <ul class="breadcrumb">
+        <li tabindex="0">
+            <a href="../Home/index.html">Home</a>
+        </li>
     <li>About us</li>
-</ul>
-
-<div class="slider">
-    <figure>
-        <div class="slide">
-            <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
-        </div>
-
-        <div class="slide">
-            <img src="../../img/image/apfel-apple-brille-616835.jpg" alt="" >
-        </div>
-
-        <div class="slide">
-            <img src="../../img/image/container-diat-einmachglas-279035.jpg" alt="" >
-        </div>
-
-        <div class="slide">
-            <img src="../../img/image/essen-frisch-frucht-1656664.jpg" alt="" >
-        </div>
-
-        <div class="slide">
-            <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
-        </div>
-    </figure>
-</div>
+    </ul>
+    <div class="slider">
+        <figure>
+            <div class="slide">
+                <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
+            </div>
+            <div class="slide">
+                <img src="../../img/image/apfel-apple-brille-616835.jpg" alt="" >
+            </div>
+            <div class="slide">
+                <img src="../../img/image/container-diat-einmachglas-279035.jpg" alt="" >
+            </div>
+            <div class="slide">
+                <img src="../../img/image/essen-frisch-frucht-1656664.jpg" alt="" >
+            </div>
+            <div class="slide">
+                <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
+            </div>
+        </figure>
+    </div>
 </header>
 <!-- Section B -->
 <main id="section-c" class="grid" tabindex="0">
@@ -79,6 +82,7 @@
         <h2 class="content-title">Our Story</h2>
         <p>
             Spreewaldgurken is a business founded by family, living in the region of Lübenau (Spreewald). <br>The residents of Spreewald before world war 2 housed visitors for at least a week for a small token as they guided them around the many tourist sites in the area. <br>With the growth of the Internet coupled with people's love for vacation, we setup this business to continue the tradition of old, to familiarize people with the beauty of Spreewald so they have the opportunity to get to know the hidden nature here.<br> Our main goal is to provide customers with a once in a lifetime experience for different budgets. <br>We have received customers from all parts of the world within the last 50 years.<br> We look forward to welcoming you!!!
+        </p>
     </div>
 </main>
 
@@ -86,33 +90,47 @@
 <!-- Section C-->
 <div id="main">
     <section id="section-d" class="grid" tabindex="0">
-        <div class="box">
+        <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
-            <p>preeWaldGürcken GmbH<br>Karl-liebkenchtStr 102<br>Germany<br>03046 Cottbus<br>
-                Tel: +49 1111-555-1212 </p>
-            <p>contact@spreewahld.de</p>
+            <p typeof="Organization">
+                <span property="legalName">SpreeWaldGürcken GmbH</span><br>
+                <span property="address" typeof="PostalAddress">
+                    <span property="streetAddress">Karl-liebkenchtStr 102</span><br>
+                    <span property="addressLocality">Cottbus</span> -
+                    <span property="addressCountry" typeof="Country">Germany</span><br>
+                    <span property="postalCode">03046</span>
+                </span><br>Tel: 
+                <span property="telephone" content="+4911115551212">+49 1111-555-1212</span>
+            </p>
+            <p typeof="Organization">
+                <span property="email">contact@spreewahld.de</span>
+            </p>
         </div>
 
         <div class="box">
             <h2 class="content-title">About Our services</h2>
-            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.</p>
+            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.
+            </p>
         </div>
     </section>
 </div>
 
 <!-- Footer -->
 <footer id="main-footer" class="grid-grid">
-
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
         <li tabindex="0">
-            <a href='#' target='_blank' ><span class="socicon-facebook"></span></a>
+            <a href='#' target='_blank' >
+                <span class="socicon-facebook"></span>
+            </a>
         </li>
         <li tabindex="0">
             <a href="../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
         </li>
         <li tabindex="0">
-            <a href='#' target='_blank'><span class="socicon-instagram"></span></a>
+            <a href='#' target='_blank'>
+                <span class="socicon-instagram"></span>
+            </a>
         </li>
     </ul>
 </footer>
