--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact Us/Contact.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact Us/Contact.html
@@ -44,7 +44,7 @@
     <div tabindex="0"> 
         <a href="Contact.html" id="Contact">Contact us</a> 
     </div>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
 <!-- Section A -->
