license + new foto

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
+    <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="blackandwhite" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body onload="accesskey()">
@@ -133,6 +134,25 @@
             </a>
         </li>
     </ul>
+    <div>
+        <div vocab="http://purl.org/dc/terms/">
+            <p>Date:
+                <span property="created">2019-01-28</span><br>
+                <span property="creator">Moussa</span> &
+                <span property="creator">Kingsley</span>
+            </p>
+        </div>
+
+        <p vocab="http://creativecommons.org/ns#">
+            All content on this blog item is licensed under
+            <a property="license" href="http://creativecommons.org/licenses/by/3.0/">
+                a Creative Commons License
+            </a>.
+            <span property="attributionName">
+		&copy;2019 Moussa & Kingsley
+	</span>.
+        </p>
+    </div>
 </footer>
 <script src="../../../js/Script.js"></script>
 </body>
