--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
@@ -7,17 +7,18 @@
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="blackandwhite" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="../../../js/Script.js" defer="defer"></script>
 </head>
 <body onload="accesskey()">
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0" >
-        <a href="../../Home/index.html" class="active" id="home">Home</a> 
+    <div >
+        <a href="../../Home/index.html" class="active" id="home" tabindex="1">Home</a>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="../../Shop/Home/Shop.html" id="Packages"> Packages </a>
+            <a href="../../Shop/Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -27,9 +28,9 @@
             <a href="../../Shop/Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../../About%20the%20region/Description/Description.html" > About the region </a>
+            <a href="../../About%20the%20region/Description/Description.html" tabindex="3"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -39,19 +40,15 @@
             <a href="#">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0" > 
-        <a href="../../AboutUs/AboutUs.html" id="About">About us</a> 
-    </div>
-   <div tabindex="0"> 
-       <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a> 
-    </div>
+        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
+       <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
 <!-- Section A -->
 <header>
     <ul class="breadcrumb">
-        <li tabindex="0">
+        <li tabindex="6">
             <a href="../../Home/index.html">Home</a>
         </li>
         <li>wallpaper</li>
@@ -122,16 +119,16 @@
 
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
-        <li tabindex="0">
-            <a href='#' target='_blank' >
+        <li >
+            <a href='#' target='_blank'tabindex="7" >
                 <span class="socicon-facebook"></span>
             </a>
         </li>
-        <li tabindex="0">
-            <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
+        <li >
+            <a href="../../Shop/Home/Shop.html" accesskey="p" tabindex="8"> <u>P</u>ackages </a>
         </li>
-        <li tabindex="0">
-            <a href='#' target='_blank' >
+        <li >
+            <a href='#' target='_blank'tabindex="9" >
                 <span class="socicon-instagram"></span>
             </a>
         </li>
@@ -156,6 +153,5 @@
         </p>
     </div>
 </footer>
-<script src="../../../js/Script.js"></script>
 </body>
 </html>
