--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -7,17 +7,18 @@
     <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link href="../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="blackandwhite" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="../../js/Script.js" defer="defer"></script>
 </head>
 <body onload="accesskey()">
     
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0"> 
-        <a href="index.html" class="active" id="home">Home</a> 
+    <div>
+        <a href="index.html" class="active" id="home" tabindex="1">Home</a>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown" >
          <div class="dropbtn"> 
-             <a href="../Shop/Home/Shop.html" id="Packages"> Packages </a>
+             <a href="../Shop/Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -27,9 +28,9 @@
             <a href="../Shop/Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../About%20the%20region/Description/Description.html" > About the region </a>
+            <a href="../About%20the%20region/Description/Description.html" tabindex="3" > About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -39,22 +40,18 @@
             <a href="../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0"> 
-        <a href="../AboutUs/AboutUs.html" id="About"> About us</a>
-    </div>
-    <div tabindex="0"> 
-        <a  href="../Contact%20Us/Contact.html" id="Contact">Contact us</a>
-    </div>
+        <a href="../AboutUs/AboutUs.html" id="About" tabindex="4"> About us</a>
+        <a  href="../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
-<header id="showcase" class="grid" tabindex="0" >
+<header id="showcase" class="grid"  >
     <div class="bg-image"> </div>
     <div class="content-wrap">
         <h1>Welcome to Tourist Information</h1>
         <p>Would you like to take a well planned trip to tourist locations in Spreewald?
             Save yourself the time and effort as we offer you several packages which include accomodation and transportation at moderate prices to tourist sites at Burg, Lubbenau, Lubben, Calau and Cottbus.
         </p>
-     <div tabindex="0"> 
+     <div>
          <a href="#section-b" class="btn">Read More</a> 
         </div>
     </div>
@@ -69,7 +66,7 @@
         <div class="content-wrap">
             <h3 class="content-title">
                 <a href="index.html">
-                    <img id="logo" src="../../img/Imges/logo1.png" alt="SpreewaldGürken-Home" tabindex="1">
+                    <img id="logo" src="../../img/Imges/logo1.png" alt="SpreewaldGürken-Home" >
                 </a>
             </h3>
             <div class="content-text">
@@ -85,7 +82,7 @@
     <section id="section-b" class="grid">
         <ul>
             <li>
-                <div class="card" tabindex="0">
+                <div class="card" >
                     <img src="../../img/Imges/G1.png" alt="">
                     <div class="card-content">
                         <h3 class="card-title">Forest Cycling Tour</h3>
@@ -94,7 +91,7 @@
                 </div>
             </li>
             <li>
-                <div class="card" tabindex="0">
+                <div class="card" >
                     <img src="../../img/Imges/G3.png" alt="">
                     <div class="card-content">
                         <h3 class="card-title">River Boat-ride Tour</h3>
@@ -104,7 +101,7 @@
                 </div>
             </li>
             <li>
-                <div class="card" tabindex="0">
+                <div class="card">
                     <img src="../../img/Imges/G2.png" alt="">
                     <div class="card-content">
                         <h3 class="card-title">Food and Cultural Tourism</h3>
@@ -126,7 +123,7 @@
     </section>
 
     <!-- Section D -->
-    <section id="section-d" class="grid" tabindex="0">
+    <section id="section-d" class="grid" >
         <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
             <p typeof="Organization">
@@ -157,16 +154,16 @@
 
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
-        <li tabindex="0">
-            <a href='#' target='_blank' >
+        <li>
+            <a href='#' target='_blank' tabindex="6">
                 <span class="socicon-facebook"></span>
             </a>
         </li>
-        <li tabindex="0">
-            <a href="../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
+        <li >
+            <a href="../Shop/Home/Shop.html" accesskey="p" tabindex="7"> <u>P</u>ackages </a>
         </li>
-        <li tabindex="0">
-            <a href='#' target='_blank'>
+        <li>
+            <a href='#' target='_blank' tabindex="8">
                 <span class="socicon-instagram"></span>
             </a>
         </li>
@@ -191,6 +188,5 @@
         </p>
     </div>
 </footer>
-<script src="../../js/Script.js"></script>
 </body>
 </html>
