--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
@@ -8,17 +8,18 @@
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="blackandwhite" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="../../../js/Script.js" defer="defer"></script>
 </head>
 <body onload="displayHoliday() ; accesskey()">
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0">  
-        <a href="../../Home/index.html" class="active" id="home">Home</a> 
+    <div>
+        <a href="../../Home/index.html" class="active" id="home" tabindex="1">Home</a>
     </div>
-    <div class="dropdown" tabindex="0" >
+    <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../Home/Shop.html" id="Packages"> Packages </a>
+            <a href="../Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -28,9 +29,9 @@
             <a href="../Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="../../About%20the%20region/Description/Description.html" > About the region </a>
+            <a href="../../About%20the%20region/Description/Description.html" tabindex="3" > About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -40,22 +41,20 @@
             <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0">
-        <a href="../../AboutUs/AboutUs.html" id="About">About us</a> 
-    </div>
-    <div tabindex="0"> 
-        <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a> 
-    </div>
+
+        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
+
+        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
 <header>
     <ul class="breadcrumb">
-        <li tabindex="0">
-            <a href="../../Home/index.html">Home</a>
+        <li>
+            <a href="../../Home/index.html" tabindex="6">Home</a>
         </li>
-        <li tabindex="0">
-            <a href="../Home/Shop.html">Packages</a>
+        <li >
+            <a href="../Home/Shop.html" tabindex="7">Packages</a>
         </li>
         <li>Holliday</li>
     </ul>
@@ -102,16 +101,16 @@
 <footer id="main-footer" class="grid-grid">
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
-        <li tabindex="0">
-            <a href='#' target='_blank' >
+        <li >
+            <a href='#' target='_blank' tabindex="8">
                 <span class="socicon-facebook"></span>
             </a>
         </li>
-        <li tabindex="0">
-            <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
+        <li >
+            <a href="../../Shop/Home/Shop.html" accesskey="p" tabindex="9"> <u>P</u>ackages </a>
         </li>
-        <li tabindex="0">
-            <a href='#' target='_blank'>
+        <li >
+            <a href='#' target='_blank' tabindex="10">
                 <span class="socicon-instagram"></span>
             </a>
         </li>
@@ -136,6 +135,5 @@
         </p>
     </div>
 </footer>
-<script src="../../../js/Script.js"></script>
 </body>
 </html>
