--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -7,17 +7,18 @@
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="blackandwhite" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="../../../js/Script.js" defer="defer"></script>
 </head>
-<body onload="accesskey();displaySport()">
+<body onload="accesskey()">
     
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0"> 
-        <a href="../../Home/index.html" class="active" id="home">Home</a> 
+    <div>
+        <a href="../../Home/index.html" class="active" id="home" tabindex="1">Home</a>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../Home/Shop.html" id="Packages"> Packages </a>
+            <a href="../Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -27,9 +28,9 @@
             <a href="../Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../../About%20the%20region/Description/Description.html" > About the region </a>
+            <a href="../../About%20the%20region/Description/Description.html" tabindex="3" > About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -39,23 +40,23 @@
             <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0">  
-        <a href="../../AboutUs/AboutUs.html" id="About">About us</a>
-    </div>
-    <div tabindex="0"> 
-        <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a>
-    </div>
+
+        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
+
+
+        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
+
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
     
 <!-- Section A -->
 <header>
     <ul class="breadcrumb">
-        <li tabindex="0">
-            <a href="../../Home/index.html">Home</a>
+        <li >
+            <a href="../../Home/index.html" tabindex="6">Home</a>
         </li>
-        <li tabindex="0">
-            <a href="../Home/Shop.html">Packages</a>
+        <li >
+            <a href="../Home/Shop.html" tabindex="7">Packages</a>
         </li>
         <li>Special offers</li>
     </ul>
@@ -69,7 +70,7 @@
             <h1>Welcome to our Special offers </h1>
             <p>You get 10 percent on all trips and meals.<br> our meals are prepared with organic crops freshly taken from the farm which makes them highly nutritious. <br>You also get pumpkin soup for free. Discover our special offers now!
             </p>
-            <a href="../Hollydays/Hollydays.html" class="btn">Read More</a>
+            <a href="../Hollydays/Hollydays.html" class="btn" tabindex="8">Read More</a>
         </div>
     </div>
 
@@ -91,7 +92,7 @@
 
             Tip: Not all ports offer daily winter boat rides in the low season. Therefore, we recommend that prior to your arrival to the ports for "Glühweinkahnfahrten" in Spreewald ask for individual tours.You can find all these offers in sports
         </p>
-        <a href="../Sport/Sport.html" class="btn">Read More</a>
+        <a href="../Sport/Sport.html" class="btn" tabindex="9">Read More</a>
     </div>
 </div>
 
@@ -129,16 +130,16 @@
 <footer id="main-footer" class="grid-grid">
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
-        <li tabindex="0">
-            <a href='#' target='_blank' >
+        <li >
+            <a href='#' target='_blank' tabindex="10">
                 <span class="socicon-facebook"></span>
             </a>
         </li>
-        <li tabindex="0">
-            <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
+        <li >
+            <a href="../../Shop/Home/Shop.html" accesskey="p" tabindex="11"> <u>P</u>ackages </a>
         </li>
-        <li tabindex="0">
-            <a href='#' target='_blank'>
+        <li>
+            <a href='#' target='_blank' tabindex="12">
                 <span class="socicon-instagram"></span>
             </a>
         </li>
@@ -163,6 +164,5 @@
         </p>
     </div>
 </footer>
-<script src="../../../js/Script.js"></script>
 </body>
 </html>
