--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -7,16 +7,18 @@
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="blackandwhite" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="../../../js/Script.js" defer="defer"></script>
+    <script src="../../../js/SportScript.js" defer="defer"></script>
 </head>
-<body onload="displaySport() ; accesskey()">
+<body onload=" accesskey(); displaySport()">
 
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0">  
-        <a href="../../Home/index.html" class="active" id="home">Home</a>
+    <div >
+        <a href="../../Home/index.html" class="active" id="home" tabindex="1">Home</a>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../Home/Shop.html" id="Packages"> Packages </a>
+            <a href="../Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -26,9 +28,9 @@
             <a href="../Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="../../About%20the%20region/Description/Description.html" > About the region </a>
+            <a href="../../About%20the%20region/Description/Description.html" tabindex="3"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -38,22 +40,22 @@
             <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0"> 
-        <a href="../../AboutUs/AboutUs.html" id="About">About us</a>
-    </div>
-    <div tabindex="0"> 
-        <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a>
-    </div>
+
+        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
+
+
+        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
+
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
-<header tabindex="0">
+<header >
     <ul class="breadcrumb">
-        <li tabindex="0">
-            <a href="../../Home/index.html">Home</a>
+        <li>
+            <a href="../../Home/index.html" tabindex="6">Home</a>
         </li>
-        <li tabindex="0">
-            <a href="../Home/Shop.html">Packages</a>
+        <li>
+            <a href="../Home/Shop.html" tabindex="7">Packages</a>
         </li>
         <li>Sport</li>
     </ul>
@@ -63,18 +65,18 @@
 
 </header>
 
-<main id="main" tabindex="0">
+<main id="main" >
 <!-- Section A -->
 
 <div id='show'></div><br>
-<input type="button" onclick="previous()" value="<<" />
-<input type="button" onclick="next()" value=">>" />
+<input type="button" onclick="previous()" value="<<" tabindex="8"/>
+<input type="button" onclick="next()" value=">>" tabindex="9"/>
 
 <!-- end Section A -->
     
 <!-- Section B -->
 <div >
-    <section id="section-d" class="grid" tabindex="0">
+    <section id="section-d" class="grid" >
         <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
             <p typeof="Organization">
@@ -106,16 +108,16 @@
 
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
-        <li tabindex="0">
-            <a href='#' target='_blank' >
+        <li >
+            <a href='#' target='_blank' tabindex="10">
                 <span class="socicon-facebook"></span>
             </a>
         </li>
-        <li tabindex="0">
-            <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
+        <li >
+            <a href="../../Shop/Home/Shop.html" accesskey="p" tabindex="11"> <u>P</u>ackages </a>
         </li>
-        <li tabindex="0">
-            <a href='#' target='_blank'>
+        <li>
+            <a href='#' target='_blank' tabindex="12">
                 <span class="socicon-instagram"></span>
             </a>
         </li>
@@ -140,6 +142,6 @@
         </p>
     </div>
 </footer>
-<script src="../../../js/Script.js"></script>
+
 </body>
 </html>
